Archive2/ef/be1e7201d6f808/output
main.cpp: In function 'int main()':
main.cpp:14:12: warning: pointer to a function used in arithmetic [-Wpointer-arith]
     vec_b[0] = 1.;
            ^
main.cpp:14:14: error: assignment of function 'std::vector<double> vec_b(int)'
     vec_b[0] = 1.;
              ^
main.cpp:14:14: error: cannot convert 'double' to 'std::vector<double>(int)' in assignment
